crates/gpui-preview/tests/ui/fail/union.rs
use gpui_preview::Previewable;

#[derive(Previewable)]
union Foo {
    a: u32,
    b: f32,
}

fn main() {}
