crates/gpui-preview/tests/ui/fail/union.stderr
error: Previewable cannot be derived for unions
 --> tests/ui/fail/union.rs:4:1
  |
4 | / union Foo {
5 | |     a: u32,
6 | |     b: f32,
7 | | }
  | |_^
